message Time {
    required fixed64 timestamp_millis_unix_epoch = 1;
    required bool is_valid = 2;
}